--- a/932202.kuzin.ilya.lab1/lab1.html
+++ b/932202.kuzin.ilya.lab1/lab1.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8" />
-<title>Web lab 1</title>
+<title>WEB1</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
